sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var temp:Int;
      ^AlgBubbleSort1:3: error: local variables must be initialized
  var temp:Int;
      ^AlgBubbleSort1:11: error: value ++ is not a member of Int
      	  incr++;
              ^