sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var temp:Int;
  var incr:Int =0;
  do{
  	for(i <- 0 to getNombreValeurs()-1){
  	  	if(getValeur(i)>getValeur(i+1)){
        	temp=getValeur(i);
      	  setValeur(i,getValeur(i+1));
      	  setValeur(i+1,temp);
      	  incr++;
    	  }
  	}
  }while(incr!=0)
}